Update README.md for JavaNativeFoundation/JDK-21
Update README.md for JavaNativeFoundation/JDK-21 changes.